# bug-repro

./: dev.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/src/: main.rs  prisma.rs
