[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0.70"
futures = "0.3.27"
itertools = "0.10.5"
specta = "1.0.0"
tauri-specta = { version = "1.0.0", features = ["typescript"] }
prisma-client-rust = { default-features = false, git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", features = ["migrations", "sqlite", "rspc", "mocking"] }
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.27.0", features = ["full"] }
num_enum = "0.5.11"



[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["prisma-cli"]
resolver = "2"